<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddFragment" android:padding="8dp">
    <TextView
            android:text="@string/default_course_code"
            android:layout_width="82dp"
            android:layout_height="wrap_content" android:id="@+id/textView_add_course_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editText_course_code"
            app:layout_constraintBottom_toBottomOf="@+id/editText_course_code"
    />
    <TextView
            android:text="@string/default_course_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView_add_course_description"
            app:layout_constraintTop_toTopOf="@+id/editText_course_description"
            app:layout_constraintBottom_toBottomOf="@+id/editText_course_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editText_course_description"/>
    <TextView
            android:text="@string/default_course_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_add_mark"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber_mark"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_mark"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber_mark"
            app:layout_constraintStart_toStartOf="@+id/textView_add_course_description"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/default_course_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_add_term"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/spinner_term"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_term"
            app:layout_constraintEnd_toStartOf="@+id/spinner_term" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_course_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_add_course_code"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_course_description"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_course_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_add_course_code"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumber_mark"
            app:layout_constraintEnd_toStartOf="@+id/switch_wd"
            app:layout_constraintTop_toBottomOf="@+id/editText_course_description" android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="@+id/editText_course_description"/>
    <Switch
            android:text="@string/withdrawn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/switch_wd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber_mark"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_mark"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/spinner_term"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/editTextNumber_mark"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/editTextNumber_mark"/>
    <Button
            android:text="@string/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/button_cancel" android:backgroundTint="@color/gray_400"
            android:textColor="@color/black"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_cancel"
            app:layout_constraintTop_toBottomOf="@+id/spinner_term"
            app:layout_constraintEnd_toStartOf="@+id/button_submit" android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/gray_400"
            android:textColor="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>